рw_18: Winston logger  was added to AccountingServiceImplMongo and ShiftControlServiceImplMongo

--- a/appConfig/app-config.json
+++ b/appConfig/app-config.json
@@ -22,5 +22,6 @@
     "PATCH/employee/password",
     "PATCH/employee"
   ],
-  "logLevel": "info"
+  "logLevel": "info",
+  "durationOneShift": 28800000
 }
