--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.14",
+    "@types/swagger-ui-express": "^4.1.8",
     "rimraf": "^6.0.1",
     "typescript": "^5.8.3"
   },
@@ -36,6 +37,7 @@
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
     "mysql2": "^3.14.3",
+    "swagger-ui-express": "^5.0.1",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "uuid": "^11.1.0",
